--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=6060
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/zupcamp_db
-spring.datasource.username=zup-2419
-spring.datasource.password=Zup@509390
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
