--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=6060
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/zupcamp_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/zupcamp_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+
+analisecartao.url=http://localhost:9999/api
